--- a/style.css
+++ b/style.css
@@ -6,29 +6,98 @@ body {
     overflow: hidden;
     text-align: center;
     margin: 0;
+    background-color: aqua;
+    height: 100vh;
+    width: 100vw;
 }
 
 h3 {
     margin-bottom: 0;
     text-align: center;
+    font-weight: bold;
+    font-size: 25px;
 }
 
 small {
     display: block;
     margin-bottom: 20px;
     text-align: center;
-    font-size: 20px;
+    font-size: 22px;
+    font-weight: bold;
 }
 
 .fa-heart {
     color: red;
 }
 
-.loveMe {
-    height: 440px;
+.cats {
+    display: flex;
+    flex-wrap: wrap;    
+    justify-content: center;
+    align-items: center;    
+    border-radius: 20px;
+}
+
+#cat1 {
+    height: 400px;
     width: 300px;
     background: url('https://images.unsplash.com/photo-1536589961747-e239b2abbec2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80') no-repeat center center/cover;
-    margin: auto;
+    margin: 20px;
+    cursor: pointer;
+    max-width: 100%;
+    position: relative;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#cat2 {
+    height: 400px;
+    width: 300px;
+    background: url('https://images.unsplash.com/photo-1571988840298-3b5301d5109b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8a2l0dHl8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60') no-repeat center center/cover;
+    margin: 20px;
+    cursor: pointer;
+    max-width: 100%;
+    position: relative;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#cat3 {
+    height: 400px;
+    width: 300px;
+    background: url('https://images.unsplash.com/photo-1617182545423-bcabd1be1896?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80') no-repeat center center/cover;
+    margin: 20px;
+    cursor: pointer;
+    max-width: 100%;
+    position: relative;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#cat4 {
+    height: 400px;
+    width: 300px;
+    background: url('https://images.unsplash.com/photo-1605028746969-11b95c137f31?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fGtpdHR5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60') no-repeat center center/cover;
+    margin: 20px;
+    cursor: pointer;
+    max-width: 100%;
+    position: relative;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#cat5 {
+    height: 400px;
+    width: 300px;
+    background: url('https://images.unsplash.com/photo-1609231617449-112c1371bc8e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fGtpdHR5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60') no-repeat center center/cover;
+    margin: 20px;
+    cursor: pointer;
+    max-width: 100%;
+    position: relative;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+#cat6 {
+    height: 400px;
+    width: 300px;
+    background: url('https://images.unsplash.com/photo-1606214174585-fe31582dc6ee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDB8fGtpdHR5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60') no-repeat center center/cover;
+    margin: 20px;
     cursor: pointer;
     max-width: 100%;
     position: relative;
@@ -37,7 +106,37 @@ small {
 
 
 
-.loveMe .fa-heart {
+#cat1 .fa-heart {
+    position: absolute;
+    animation: grow 0.6s linear;
+    transform: translate(-50%, -50%) scale(0);
+}
+
+#cat2 .fa-heart {
+    position: absolute;
+    animation: grow 0.6s linear;
+    transform: translate(-50%, -50%) scale(0);
+}
+
+#cat3 .fa-heart {
+    position: absolute;
+    animation: grow 0.6s linear;
+    transform: translate(-50%, -50%) scale(0);
+}
+
+#cat4 .fa-heart {
+    position: absolute;
+    animation: grow 0.6s linear;
+    transform: translate(-50%, -50%) scale(0);
+}
+
+#cat5 .fa-heart {
+    position: absolute;
+    animation: grow 0.6s linear;
+    transform: translate(-50%, -50%) scale(0);
+}
+
+#cat6 .fa-heart {
     position: absolute;
     animation: grow 0.6s linear;
     transform: translate(-50%, -50%) scale(0);
