--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
     box-sizing: border-box;
 }
 
-body {      
+body {
     text-align: center;
     margin: 0;
     background-color: aqua;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 h3 {
@@ -33,7 +34,7 @@ small {
     top: 100%;
     left: 50%;
     font-size: 23px;
-    font-weight: bold;    
+    font-weight: bold;
     user-select: none;
     cursor: default;
     border-radius: 50%;
@@ -42,31 +43,30 @@ small {
 
 .fa-heart {
     color: red;
-    top: 50%;    
+    top: 50%;
 }
 
-.fa-gratipay {    
-    position: absolute;    
-    font-size: 23px;    
+.fa-gratipay {
+    position: absolute;
+    font-size: 23px;
     user-select: none;
     color: rgb(8, 5, 5);
     top: 103%;
-    left: 43%;   
-    cursor: default; 
+    left: 43%;
+    cursor: default;
 }
 
 .cats {
-    
     display: flex;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
 }
 
 .cat {
     height: 400px;
     width: 300px;
-    margin: 35px;
+    margin: 25px;
     cursor: pointer;
     max-width: 100%;
     position: relative;
@@ -76,14 +76,12 @@ small {
 
 .cat .fa-heart {
     position: absolute;
-    animation: grow 0.6s linear;
-    transform: translate(-50%, -50%) scale(0);
+    animation: grow 1s linear;
 }
-
 
 @keyframes grow {
     to {
-        transform: translate(-50%, -50%) scale(28);
+        transform: translate(-50%, -50%) scale(20);
         opacity: 0;
     }
 }
