--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
     box-sizing: border-box;
 }
 
-body {
-    overflow: hidden;
+body {      
     text-align: center;
     margin: 0;
     background-color: aqua;
@@ -31,131 +30,60 @@ small {
 .times {
     text-align: center;
     position: absolute;
-    top: -6%;
+    top: 100%;
+    left: 50%;
     font-size: 23px;
     font-weight: bold;    
     user-select: none;
+    cursor: default;
+    border-radius: 50%;
+    padding: 10px 10px;
 }
 
 .fa-heart {
     color: red;
+    top: 50%;    
+}
+
+.fa-gratipay {    
+    position: absolute;    
+    font-size: 23px;    
+    user-select: none;
+    color: rgb(8, 5, 5);
+    top: 103%;
+    left: 43%;   
+    cursor: default; 
 }
 
 .cats {
+    
     display: flex;
     flex-wrap: wrap;    
     justify-content: center;
     align-items: center;    
+}
+
+.cat {
+    height: 400px;
+    width: 300px;
+    margin: 35px;
+    cursor: pointer;
+    max-width: 100%;
+    position: relative;
     border-radius: 20px;
-}
-
-#cat1 {
-    height: 400px;
-    width: 300px;
-    background: url('https://images.unsplash.com/photo-1536589961747-e239b2abbec2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80') no-repeat center center/cover;
-    margin: 20px;
-    cursor: pointer;
-    max-width: 100%;
-    position: relative;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-#cat2 {
-    height: 400px;
-    width: 300px;
-    background: url('https://images.unsplash.com/photo-1571988840298-3b5301d5109b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8a2l0dHl8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60') no-repeat center center/cover;
-    margin: 20px;
-    cursor: pointer;
-    max-width: 100%;
-    position: relative;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-#cat3 {
-    height: 400px;
-    width: 300px;
-    background: url('https://images.unsplash.com/photo-1617182545423-bcabd1be1896?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80') no-repeat center center/cover;
-    margin: 20px;
-    cursor: pointer;
-    max-width: 100%;
-    position: relative;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-#cat4 {
-    height: 400px;
-    width: 300px;
-    background: url('https://images.unsplash.com/photo-1605028746969-11b95c137f31?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjN8fGtpdHR5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60') no-repeat center center/cover;
-    margin: 20px;
-    cursor: pointer;
-    max-width: 100%;
-    position: relative;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-#cat5 {
-    height: 400px;
-    width: 300px;
-    background: url('https://images.unsplash.com/photo-1609231617449-112c1371bc8e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fGtpdHR5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60') no-repeat center center/cover;
-    margin: 20px;
-    cursor: pointer;
-    max-width: 100%;
-    position: relative;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-#cat6 {
-    height: 400px;
-    width: 300px;
-    background: url('https://images.unsplash.com/photo-1606214174585-fe31582dc6ee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDB8fGtpdHR5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60') no-repeat center center/cover;
-    margin: 20px;
-    cursor: pointer;
-    max-width: 100%;
-    position: relative;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-
-
-#cat1 .fa-heart {
+.cat .fa-heart {
     position: absolute;
     animation: grow 0.6s linear;
     transform: translate(-50%, -50%) scale(0);
 }
 
-#cat2 .fa-heart {
-    position: absolute;
-    animation: grow 0.6s linear;
-    transform: translate(-50%, -50%) scale(0);
-}
-
-#cat3 .fa-heart {
-    position: absolute;
-    animation: grow 0.6s linear;
-    transform: translate(-50%, -50%) scale(0);
-}
-
-#cat4 .fa-heart {
-    position: absolute;
-    animation: grow 0.6s linear;
-    transform: translate(-50%, -50%) scale(0);
-}
-
-#cat5 .fa-heart {
-    position: absolute;
-    animation: grow 0.6s linear;
-    transform: translate(-50%, -50%) scale(0);
-}
-
-#cat6 .fa-heart {
-    position: absolute;
-    animation: grow 0.6s linear;
-    transform: translate(-50%, -50%) scale(0);
-}
 
 @keyframes grow {
     to {
-        transform: translate(-50%, -50%) scale(18);
+        transform: translate(-50%, -50%) scale(28);
         opacity: 0;
     }
 }
